# Restaurante-WMOTA_Bistro

./: .gitignore  CMakeLists.txt  CMakeLists_main.txt  CONTRIBUTING.MD  Ideia_Projeto.txt  README.MD  build_projeto.txt  comandos.MD  sync_cmake.py
restaurante/: CMakeLists.txt
restaurante/src/: main.c
src/: imports.h  main.cpp  reservas.cpp  reservas.h
